# ovhdata-cli

./: AUTHORS  CONTRIBUTING.md  CONTRIBUTORS  Cargo.toml  MAINTAINERS  README.md  rustfmt.toml
DEPENDENCIES_LICENSES/: APACHE_2.0  MIT
ovhdata-cli/: Cargo.toml
ovhdata-cli/config/: ca.json  eu.json
ovhdata-cli/doc/: completion-how-to.md  login-how-to.md  login-success.md  main-help.md  no-auth-how-to.md  no-service-name-how-to.md  upgrade-info.md  upgrade-mandatory.md
ovhdata-cli/src/: config.rs  logging.rs  main.rs
ovhdata-cli/src/command/: mod.rs
ovhdata-cli/src/command/auth/: command.rs
ovhdata-cli/src/command/completion/: command.rs
ovhdata-cli/src/command/config/: commands.rs  mod.rs
ovhdata-cli/src/command/debug/: command.rs  mod.rs
ovhdata-cli/src/command/di/: commands.rs  destination.rs  destination_connector.rs  job.rs  mod.rs  source.rs  source_connector.rs  source_metadata.rs  workflow.rs
ovhdata-cli/src/command/me/: command.rs
ovhdata-cli/src/command/upgrade/: command.rs
ovhdata-cli/src/options/: config.rs  di.rs  mod.rs  opts.rs  utils.rs
ovhdata-cli/src/opts/: config.rs  di.rs  mod.rs  opts.rs  parse.rs  utils.rs
ovhdata-cli/src/utils/: error.rs  mod.rs
ovhdata-cli/src/utils/ui/: printer.rs
ovhdata-common/: Cargo.toml
ovhdata-common/src/: config.rs  lib.rs
ovhdata-common/src/api/: error.rs  mod.rs  reqwest_wrapper.rs
ovhdata-common/src/log/: custom_formatting_layer.rs  event.rs  mod.rs
ovhdata-common/src/model/: auth.rs  me.rs  mod.rs  project.rs  utils.rs
ovhdata-common/src/model/di/: common.rs  connector.rs  destination.rs  job.rs  mod.rs  source.rs  source_metadata.rs  workflow.rs
ovhdata-common/src/model/project/: project.rs
ovhdata-common/src/ovhapi/: auth_api.rs  di_api.rs  mod.rs  ovhapiv6.rs  project_api.rs
ovhdata-common/src/utils/: custom_serde_string.rs  date.rs  http.rs  jsonpath.rs  mod.rs  serde.rs  style.rs  util.rs
ovhdata-macros/: Cargo.toml
ovhdata-macros/src/: lib.rs
