[package]
name = "ovhdata-cli"
version = "0.1.3-dev"
authors = ["Sébastien Lambour <sebastien.lambour@ovhcloud.com>", "Claire Gallot <claire.gallot@ovhcloud.com>"]
edition = "2021"
license-file = "../LICENSE"

[dependencies]
# internal dependencies
ovhdata-common = { path = "../ovhdata-common" }

# public dependecies
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.3.5", features = ["cargo", "derive", "std"] }
clap_complete = "4.3.1"
console = "0.15.7"
crossterm = "0.26"
descriptor = "0.0.4"
dialoguer = { version = "0.10.4", features = ["fuzzy-select"] }
dirs = "5.0"
filetime = "0.2"
lazy_static = "1.4"
futures = "0.3"
maplit = "1.0"
open = "4.2.0"
openssl = { version = "0.10", features = ["vendored"] }
pulldown-cmark = { version = "0.9", default-features = false }
regex = { version = "1.8.4"}
reqwest = { version = "0.11", features = ["cookies", "gzip", "json", "stream"] }
semver = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
spinners = "4.1.0"
strip-ansi-escapes = "0.1"
thiserror = "1.0"
tokio = { version = "1.28", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.3", features = ["v4"] }
